feature(boot): Cache